# codex-gateway

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
docs/: docker.md  linux.md  macos.md  testing.md  windows.md
scripts/: CodexGatewayService.cs  install-gateway-service.ps1  install-macos-launchd.sh  setup-macos.sh  setup.ps1  start-gateway-macos.sh  start-gateway.ps1  uninstall-gateway-service.ps1  uninstall-gateway.ps1  uninstall-gateway.sh  uninstall-macos-launchd.sh
src/codex_gateway/: __main__.py
src/codex_gateway/backends/codex_app_server/: __init__.py  client.py  lifecycle.py  transport.py
src/codex_gateway/core/: commands.py  projects.py  results.py  threads.py
src/codex_gateway/gateways/telegram/: access.py  bot_api.py  bridge.py  bridge_commands.py  bridge_helpers.py  bridge_io.py  bridge_requests.py  bridge_threads.py  commands.py  config.py  constants.py  dynamic_tools.py  setup.py  state.py  types.py
testing/docker/: Dockerfile.linux  codex-gateway-docker  compose.linux.yaml
testing/probes/: mock_bot_real_app_server_smoke.py
tests/: test_scaffold.py  test_setup_script.py
tests/backends/codex_app_server/: test_client.py  test_lifecycle.py  test_protocol.py  test_websocket_transport.py
tests/core/: test_command_registry.py  test_core_state.py
tests/gateways/telegram/: test_access.py  test_bot_api.py  test_bridge.py  test_cli.py  test_command_menu.py  test_commands.py  test_config.py  test_legacy_config.py  test_state.py
tests/probes/: test_mock_bot_real_app_server_smoke.py
(+26 files in other folders)
