[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-gateway"
version = "0.1.0"
description = "Local channel bridges for Codex app-server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "websockets>=12,<17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
codex-gateway = "codex_gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codex_gateway*"]

[tool.setuptools.package-data]
"codex_gateway.backends.codex_app_server.protocol" = ["*.json", "v1/*.json", "v2/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
